# project_analyzer_server

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
br_integrator/: crew.py
br_integrator/team/: business_analyst.py  java_developer.py  python_developer.py
business_analysis/team/: business_analyst.py  solution_owner.py
business_requests/: br_data.py  br_endpoint.py  br_service.py
business_requests/br_evaluator/: br_evaluator.py  crew.py
business_requests/br_evaluator/team/: frontend_developer.py  (+3 more)
core/: database_manager.py
design_crew/: design_crew.py
input/: requirements.md  requirements_cars.md  requirements_cobol.md  requirements_cobol_v2.md  responses.md
openapi/: README.md  swagger.json
postman/: README.md  project_analyzed_collection.json  project_analyzed_environment.json
projects/: projects_data.py  projects_endpoint.py  projects_service.py
src/: llms.py  main.py  utils.py
src/analysis_crew/: analysis_crew.py  crew.py
src/architecture/: arch_endpoint.py  arch_service.py
src/br_integrator/: crew.py
src/business_analysis/: crew.py
src/business_requests/: br_data.py  br_endpoint.py  br_evaluator.py  br_service.py
src/core/: api_server.py  database_manager.py
src/design_crew/: design_crew.py
src/epic_crew/: epic_crew.py
src/functional_analysis/: ba_endpoint.py  ba_service.py
src/projects/: projects_data.py  projects_endpoint.py  projects_service.py
src/teams/: business_analyst.py  product_owner.py  software_architect.py
src/tools/: markdown_loader.py
teams/: business_analyst.py  software_architect.py
(+32 files in other folders)
